--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Home</title>
 </head>
 <body>
-
+<input id="swag" placeholder="Some SWAG" type="text">
 <button id="datime">Click me</button>
 <button id="clear">Clear</button>
 <div id="results"></div>
